--- a/public/pages/main/setup.html
+++ b/public/pages/main/setup.html
@@ -42,7 +42,7 @@
             </p>
         </div>
 
-        <div class="section-subtitle"><h3>Create app.js (or whatever you want the name of the main file to be) and Import Express framework into our Node.js application.</h3></div>
+        <div class="section-subtitle"><h3>Create <b>app.js</b>  (or whatever you want the name of the main file to be) and Import Express framework into our Node.js application.</h3></div>
         <div class="code-snip">
             <pre class="line-numbers">
                 <code class="language-javascript">
