--- a/public/pages/main/setup.html
+++ b/public/pages/main/setup.html
@@ -92,6 +92,9 @@
         </div>
 
         
+        <div>
+            <a href="/commands" class="next-step" > <h1>See also </h1> <p> >> Terminal Commands </p> </a>
+        </div>
             
     </section>
 
