--- a/public/pages/portal/portal.html
+++ b/public/pages/portal/portal.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="main">
-            <h1 class="main__title">Node.JS Documentation by Adrian E.</h1>
+            <h1 class="main__title">Node.JS Documentation <br> &copy; Adrian E.</h1>
             <h2 class="main__subtitle">
                 Node.js is open-source and completely free, and thousands of developers around the world use it. The platform brings plenty of advantages to the table, making it a better choice than other server-side platforms, like Java or PHP. 
                <br> Let us now begin our tutorial on NodeJS by understanding what is node.js.
