--- a/public/pages/main/npm-scripts.html
+++ b/public/pages/main/npm-scripts.html
@@ -44,6 +44,8 @@
         <div class="section-subtitle"><h3>Running <i>npm run start</i>  with the above script would start a node server.</h3></div>
         <hr>
 
+        <div class="section-subtitle"><h2>Compound NPM script</h2></div>
+
         <div class="code-snip">
             <pre class="line-numbers">
                 <code class="language-json">
